<resources>
    <string name="app_name">Realtor Listings</string>
    <string name="search_box_hint">Search Listings...</string>
    <string name="search_button_text">Search</string>
    <string name="loading_error">Unable to execute search.  Please check your internet connection.</string>

    <string name="action_share">Share</string>
    <string name="action_view_on_web">View repo on Realtor.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_bookmark">Bookmark this repo</string>
    <string name="action_email">Email</string>

    <string name="nav_search">Search</string>
    <string name="nav_bookmarked_repos">Bookmarked repos</string>
    <string name="nav_settings">Settings</string>

    <string name="share_repo_text">Check out this new property listing! 🤓 %1$s (%2$s)</string>

    <!-- Strings for sort-by preference -->
    <string name="pref_sort_key" translatable="false">pref_sort</string>
    <string name="pref_sort_title">Minimum Beds</string>
    <string name="pref_sort_entry_best_match">1</string>
    <string name="pref_sort_entry_stars">2</string>
    <string name="pref_sort_value_stars" translatable="false">2</string>
    <string name="pref_sort_entry_forks">3</string>
    <string name="pref_sort_value_forks" translatable="false">3</string>
    <string name="pref_sort_entry_updated">4</string>
    <string name="pref_sort_value_updated" translatable="false">4</string>
    <string name="pref_sort_default">@string/pref_sort_value_stars</string>

    <!-- Strings for programming language preference -->
    <string name="pref_language_key" translatable="false">pref_language</string>
    <string name="pref_language_title">Minimum Baths</string>
    <string name="pref_language_entry_any">1</string>
    <string name="pref_language_entry_c">2</string>
    <string name="pref_language_value_c" translatable="false">2</string>
    <string name="pref_language_entry_cpp">3</string>
    <string name="pref_language_value_cpp" translatable="false">3</string>
    <string name="pref_language_entry_java">4</string>
    <string name="pref_language_value_java" translatable="false">4</string>
    <string name="pref_language_default">@string/pref_language_entry_c</string>

    <!-- Strings for search-in preference -->
    <string name="pref_in_title">Search in</string>
    <string name="pref_in_name_key" translatable="false">pref_in_name</string>
    <string name="pref_in_name_title">Search in name</string>
    <string name="pref_in_description_key" translatable="false">pref_in_description</string>
    <string name="pref_in_description_title">Search in description</string>
    <string name="pref_in_readme_key" translatable="false">pref_in_readme</string>
    <string name="pref_in_readme_title">Search in README</string>

    <!-- Strings for user preference -->
    <string name="pref_user_key" translatable="false">pref_user</string>
    <string name="pref_user_title">City</string>

    <!-- Strings for state preference -->
    <string name="pref_state_key" translatable="false">pref_state</string>
    <string name="pref_state_title">State</string>

    <!-- Strings for state preference -->
    <string name="pref_pmin_key" translatable="false">pref_pmin</string>
    <string name="pref_pmin_title">Minimum Price</string>

    <!-- Strings for state preference -->
    <string name="pref_pmax_key" translatable="false">pref_pmax</string>
    <string name="pref_pmax_title">Maximum Price</string>

    <!-- Strings for sorting preference -->
    <string name="pref_sortby_key" translatable="false">pref_sortby</string>
    <string name="pref_sortby_title">Sort By</string>
    <string name="pref_sortby_entry_relevance">relevance</string>
    <string name="pref_sortby_entry_min_price">lowest Price</string>
    <string name="pref_sortby_value_min_price" translatable="false">price_low</string>
    <string name="pref_sortby_entry_max_price">highest Price</string>
    <string name="pref_sortby_value_max_price" translatable="false">price_high</string>
    <string name="pref_sortby_entry_newest">newest</string>
    <string name="pref_sortby_value_newest" translatable="false">newest</string>
    <string name="pref_sortby_default">@string/pref_sortby_value_newest</string>

</resources>