<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:title="@string/pref_sortby_title"
        android:key="@string/pref_sortby_key"
        android:dialogTitle="@string/pref_sortby_title"
        android:entries="@array/pref_sortby_entries"
        android:entryValues="@array/pref_sortby_values"
        android:defaultValue="@string/pref_sortby_default"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        android:title="@string/pref_sort_title"
        android:key="@string/pref_sort_key"
        android:dialogTitle="@string/pref_sort_title"
        android:entries="@array/pref_sort_entries"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        android:title="@string/pref_language_title"
        android:key="@string/pref_language_key"
        android:dialogTitle="@string/pref_language_title"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_values"
        android:defaultValue="@string/pref_language_default"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:title="@string/pref_user_title"
        android:key="@string/pref_user_key"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="Corvallis"/>

    <EditTextPreference
        android:title="@string/pref_state_title"
        android:key="@string/pref_state_key"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="OR"/>

    <EditTextPreference
        android:title="@string/pref_pmin_title"
        android:key="@string/pref_pmin_key"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="0"/>

    <EditTextPreference
        android:title="@string/pref_pmax_title"
        android:key="@string/pref_pmax_key"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="100000000"/>


    <!--
    <PreferenceCategory android:title="@string/pref_in_title">
        <CheckBoxPreference
            android:title="@string/pref_in_name_title"
            android:key="@string/pref_in_name_key"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:title="@string/pref_in_description_title"
            android:key="@string/pref_in_description_key"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:title="@string/pref_in_readme_title"
            android:key="@string/pref_in_readme_key"
            android:defaultValue="false" />
    </PreferenceCategory>
    -->

</PreferenceScreen>